# allen_v1dd

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  stim_analysis_changelogs.md
analysis_notebooks/: README.md
analysis_notebooks/chase/: 2022-09-12_dg-compare.ipynb  2022-09-16_lsn-analysis.ipynb  2022-10-31_em_playground.ipynb  (+18 more)
data_frames/: lsn-events.h5  stim_analysis_changelogs.md
data_processing/: convert_dup_method.py  load_metrics.py  run_stimulus_analyses.py
david/: 2022_12_12_naturalscene_encoding.ipynb  2023_01_19_functional-classes.ipynb  2023_01_26_2p-em_correspondence.ipynb  2023_02_13_correlations.ipynb  2023_02_20_correlations_newapi.ipynb  2023_02_28_networkx_2p.ipynb  2023_03_03_naturalscene_encoding_newapi.ipynb  2023_03_15_2p-deconvolution_CASCADE.ipynb  2023_03_17_C1V3_V1DD_registration_DGW.ipynb  2023_03_20_coregistration.ipynb  2023_03_20_evokedvspont.ipynb  2023_04_11_C1V3_V1DD_registration.ipynb  2023_04_11_naturalmovies_all-sessions.ipynb  2023_05_09_constellation-method_microns.ipynb  2023_06_09_C1V3_V1DD_CPD.ipynb  2023_06_09_C1V3_V1DD_registration_refresh.ipynb  2025_09_02_functional_metrics.ipynb
example_notebooks/: 01_load-data.ipynb  02_dg-analysis.ipynb  03_example_h5_analyses.ipynb  04_example-em.ipynb  05_functional_metrics.ipynb
registration/: bidiphase.py  nonrigid.py  rUtils.py  reference.py  register.py  rigid.py
scripts/: create_the_real_NWB_files.py  create_the_real_NWB_files_3p.py  stim_analyses.md  stim_analysis_isilon.sh  stim_analysis_isilon_screen.sh
test/: test_v1dd_client.py
(+102 files in other folders)
